<resources>
    <string name="app_name">DrinkItApp</string>
    <string name="button_loginBtn">Login</string>
    <string name="button_loginGian">Login</string>
    <string name="button_secondBtnGian">Contact us!</string>
    <string name="button_signUp">Sign Up</string>
    <string name="edit_eMail">Email</string>
    <string name="edit_password">Password</string>
    <string name="edit_username">Name</string>
    <string name="notify_defaultChannel">dummyChannel_01</string>
    <string name="notify_defaultTitle">dummyTitle_01</string>
    <string name="tab_login">Log in</string>
    <string name="tab_registration">Sign up</string>
    <string name="text_dummyGian">Dito is hot in a 5km radius</string>
    <string name="text_dummyHello">Hello, my old Friend!</string>
    <string name="text_dummyHello2">You again, my old Friend!</string>
    <string name="text_homeScreen">This is the Homepage.</string>
    <string name="text_splashScreen">DrinkApp</string>
    <string name="view_eMail">Email</string>
    <string name="view_eMailGian">E-mail Address</string>
    <string name="view_forgotPwdGian">Forgot Password</string>
    <string name="view_password">Password</string>
    <string name="view_passwordGian">Password</string>
    <string name="view_signAsHost">Would you prefer to have a look around as Guest?</string>
    <string name="view_signInTitle">Log-in</string>
    <string name="view_signUpTitle">Sing-in</string>
    <string name="view_username">Username</string>
    <string name="clickHere">Click here!</string>
    <string name="text_regitstrationBtn">Sign up</string>
    <string name="text_welcomeMsg">First things first, why don\'t you tell us something about %s\nThis will help us giving you more accurate results for the Alcohol Test.</string>
    <string name="text_welcomeMsgHome">First things first, why don\'t you tell us something about you?\nThis will help us giving you more accurate results for the Alcohol Test.</string>
    <string name="data_userAge">How old are you?</string>
    <string name="data_userHeight">Height (cm)</string>
    <string name="text_welcomeMsg2">Welcome!</string>
    <string name="data_userGender">What is your gender?</string>
    <string name="data_male">Man</string>
    <string name="data_female">Woman</string>
    <string name="data_bonesLight">Thin</string>
    <string name="data_bonesMedium">Medium</string>
    <string name="data_bonesHeavy">Large</string>
    <string name="button_saveData">Save</string>
    <string name="text_whichBones">What is your build?</string>
    <string name="text_signedInFmt">Signed in as: %s</string>
    <string name="text_signedOutGoogle">Signed out</string>
    <string name="text_signOutGoogle">Sign Out</string>
    <string name="text_disconnectGoogle">Disconnect</string>
    <string name="intent_deepLink">Deep-DrinkApp</string>
    <string name="fb_appId">253625351962241</string>
    <string name="fb_loginProtocolScheme" translatable="false">fb253625351962241</string>
    <string name="text_socialButton">or Login with:</string>
    <string name="text_blankFragment">Hello new Fragment!</string>
    <string name="text_displaySettings">Settings</string>
    <string name="ModificaProfiloTitle">Profile Settings</string>
    <string name="NewMailText">New Email</string>
    <string name="text_myNewCredentials">Change your Password</string>
    <string name="text_old_password">Old Password</string>
    <string name="text_confirm_password">Confirm Password</string>
    <string name="text_insert_new_password">New Password</string>
    <string name="pref_headerGeneral">General</string>
    <string name="pref_socialRecommendations">Enable social recommendations</string>
    <string name="pref_descrSocialRecommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="uber_check">Enable Uber© services</string>
    <string name="call_button">Get an Uber© Ride!</string>
    <string name="home_main_text">This is DrinkItApp!\nDrink responsibly.</string>
    <string name="customUberTxt">Uber© Button</string>
    <string name="copyAccessToken">Copy Access Token to Clipboard</string>
    <string name="clearAccessToken">Clear Access Token</string>
    <string name="userCancelsMsg">User cancels Login</string>
    <string name="loginErrorMsg">Error occured during Login: %s</string>
    <string name="authCodeMsg">Received an Authorization:\\n %s</string>
    <string name="greetingUser">Hello %s!</string>
    <string name="text_notification_title">Your Notifications</string>
    <string name="text_notification_request">Do you want to enable notifications?</string>
    <string name="checkBox_notification">Enable !</string>
    <string name="text_uberSettingTitle">Uber Settings</string>
    <string name="text_uberSettingRequest">Do you want to enable Uber© settings on DrinkItApp?</string>
    <string name="checkBoxUber">Disable!</string>
    <string name="CheckBoxUber">Enable!</string>
    <string name="EditText_myNewHome">Address</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_cocktail">What did you drink?</string>
    <string name="add_cocktail">Add to List</string>
    <string name="remove_cocktail">x</string>
    <string name="tv_create_cocktail">Can\'t find your Drink?</string>
    <string name="clickable_insert_cocktail">Create it!</string>
    <string name="clickable_remove_cocktail">Remove</string>
    <string name="recap_drink">Selected Drinks:</string>
    <string name="drinklist"></string>
    <string name="text_title_Settings">Settings</string>
    <string name="text_title_notifications">Notification</string>
    <string name="text_title_uberSettings">Uber©</string>
    <string name="text_title_creditSetting">About us</string>
    <string name="text_title_tutorial">Tutorial</string>
    <string name="text_title_newPasswordSetting">Change the Password</string>
    <string name="text_reflex_test_title">Reflex Game</string>
    <string name="text_description_reflex">The game will start by pressing the button; try to stop the car before the pedestrian crossing with the same button. Failing could mean that your reflexes are slowed down by the alcohol </string>
    <string name="uber_welcome_message">Call an Uber!</string>
    <string name="location_permission_request">Use your current GPS position</string>
    <string name="textview_position">Type your Position:</string>
    <string name="app_title_bar">DrinkItApp</string>
    <string name="title_reflexTest">Reflex Game</string>
    <string name="switch_button">Notifications</string>
    <string name="item_setting_title">Settings</string>
    <string name="text_title_logOutSetting">Log-out</string>
    <string name="text_reflexTest_title">Reflex Game</string>
    <string name="button_testButton">Button</string>
    <string name="text_title_registerBtnSetting">Sign in</string>
    <string name="textView_aboutUs_title">DrinkApp</string>
    <string name="editText_creditTitle">What is DrinkItApp?</string>
    <string name="textView_creditDescription">In Europe more than 10 thousand people a year die due to alcohol related car accidents.\nDrinkItApp allows you to calculate your BAC according to your physical characteristics and what you\'ve drunk. \nThe result is a mere estimate. DrinkItApp and its staff do not support or encourage in any way alcohol abuse and recommend you to not drive after you drank. </string>
    <string name="item_info_title">Info</string>
    <string name="textView_info_risks">What do you risk?</string>
    <string name="TextView_title_infoPage">Info</string>
    <string name="btn_calculate">Calculate</string>
    <string name="normal_stomach">A Little</string>
    <string name="stomach_question">How much did you eat?</string>
    <string name="minutes_question">How long ago have you had your last Drink?</string>
    <string name="new_minutes_question">How long ago?</string>
    <string name="default_webClientId">229809367707-cflf0dofcgutp8529d1tl2ajalt0jen9.apps.googleusercontent.com</string>
    <string name="textView_retryText">You were too slow, it took you\n%.2f seconds</string>
    <string name="textview_risks">L’alcol provoca un\'iniziale euforia e perdita dei freni inibitori, ma a quantità progressivamente crescenti corrispondono effetti come riduzione della visione laterale (visione a tunnel), perdita di equilibrio, difficoltà motorie, nausea e confusione.\nQuantità eccessive di alcol possono portare fino al coma e alla morte.</string>
    <string name="create_drink_tv">Create your Drink!</string>
    <string name="create_name">Drink Name</string>
    <string name="create_tax">Alcoholic %</string>
    <string name="create_tv2">If you don\'t know the alcoholic %, choose between these:</string>
    <string name="low">Mild</string>
    <string name="strong">Strong</string>
    <string name="very_strong">Very Strong</string>
    <string name="create_cancel">CANCEL</string>
    <string name="create_confirm">CONFIRM</string>
    <string name="item_DrinkHistory">DrinkHistory</string>
    <string name="notWarning">You\'re under the limit but you should still drive cautiously  </string>
    <string name="warning0_5">You\'re above the limit. You could be fined between 500 and 2000 euros and have your license suspended from 3 to 6 months</string>
    <string name="item_title_myDrinks">MyDrinks</string>
    <string name="uber_setting2">Type your Destination:</string>
    <string name="find_ride">Find a Ride</string>
    <string name="taxi_fragment">Are you wasted and now you want to go home or anywhere else? No problem! Tell us where you are and where you want to go, and an Uber© will take you there.</string>
    <string name="uber_tvHint_pickUp">Pick-up location</string>
    <string name="uber_tvHint_destination">Destination</string>
    <string name="you_failed">You Failed!</string>
    <string name="continue_reflex">CONTINUE</string>
</resources>