<?xml version="1.0" encoding="UTF-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:uber="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/textView25"
        android:layout_width="392dp"
        android:layout_height="25dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/bold"
        android:text="@string/uber_setting2"
        android:textAlignment="center"
        android:textColor="@color/chiantiClean"
        android:textSize="18sp"
        uber:layout_constraintEnd_toEndOf="parent"
        uber:layout_constraintHorizontal_bias="0.5"
        uber:layout_constraintStart_toStartOf="parent"
        uber:layout_constraintTop_toBottomOf="@+id/current_position_tv" />

    <Button
        android:id="@+id/angry_btn_chianti"
        android:layout_width="198dp"
        android:layout_height="35dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/button_multi_state"
        android:fontFamily="@font/bold"
        android:shadowRadius="9"
        android:text="@string/find_ride"
        android:textAllCaps="true"
        android:textColor="@color/whiteClean"
        android:textSize="18sp"
        uber:layout_constraintEnd_toEndOf="parent"
        uber:layout_constraintHorizontal_bias="0.433"
        uber:layout_constraintStart_toStartOf="parent"
        uber:layout_constraintTop_toBottomOf="@+id/editText_position2" />

    <com.uber.sdk.android.rides.RideRequestButton
        android:id="@+id/uber_button"
        android:layout_width="189dp"
        android:layout_height="35dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="8dp"
        android:visibility="invisible"
        uber:layout_constraintBottom_toBottomOf="parent"
        uber:layout_constraintEnd_toEndOf="parent"
        uber:layout_constraintStart_toStartOf="parent"
        uber:layout_constraintTop_toBottomOf="@+id/editText_position2"
        uber:layout_constraintVertical_bias="0.919"
        uber:ub__style="black" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="cursive"
        android:text="@string/uber_welcome_message"
        android:textAlignment="center"
        android:textColor="@color/chiantiLight"
        android:textSize="34sp"
        android:textStyle="bold"
        uber:layout_constraintEnd_toEndOf="parent"
        uber:layout_constraintHorizontal_bias="0.5"
        uber:layout_constraintStart_toStartOf="parent"
        uber:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="392dp"
        android:layout_height="25dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/bold"
        android:text="@string/textview_position"
        android:textAlignment="center"
        android:textColor="@color/chiantiClean"
        android:textSize="18sp"
        uber:layout_constraintEnd_toEndOf="parent"
        uber:layout_constraintHorizontal_bias="0.5"
        uber:layout_constraintStart_toStartOf="parent"
        uber:layout_constraintTop_toBottomOf="@+id/textView24" />

    <TextView
        android:id="@+id/current_position_tv"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/location_permission_request"
        android:textColor="@drawable/gps_multi_state"
        uber:layout_constraintEnd_toEndOf="parent"
        uber:layout_constraintHorizontal_bias="0.5"
        uber:layout_constraintStart_toStartOf="parent"
        uber:layout_constraintTop_toBottomOf="@+id/editText_position1" />

    <EditText
        android:id="@+id/editText_position1"
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/text_ellipse_chianti"
        android:ems="10"
        android:fontFamily="@font/regular"
        android:hint="@string/uber_tvHint_pickUp"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#000000"
        uber:layout_constraintEnd_toEndOf="parent"
        uber:layout_constraintHorizontal_bias="0.5"
        uber:layout_constraintStart_toStartOf="parent"
        uber:layout_constraintTop_toBottomOf="@+id/divider13" />

    <EditText
        android:id="@+id/editText_position2"
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/text_ellipse_chianti"
        android:ems="10"
        android:fontFamily="@font/regular"
        android:hint="@string/uber_tvHint_destination"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#000000"
        uber:layout_constraintEnd_toEndOf="parent"
        uber:layout_constraintHorizontal_bias="0.5"
        uber:layout_constraintStart_toStartOf="parent"
        uber:layout_constraintTop_toBottomOf="@+id/divider15" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/regular"
        android:gravity="center"
        android:text="@string/taxi_fragment"
        android:textAlignment="center"
        android:textSize="16sp"
        uber:layout_constraintEnd_toEndOf="parent"
        uber:layout_constraintHorizontal_bias="0.5"
        uber:layout_constraintStart_toStartOf="parent"
        uber:layout_constraintTop_toBottomOf="@+id/textView14" />

    <View
        android:id="@+id/divider13"
        android:layout_width="200dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:background="@color/chiantiLight"
        uber:layout_constraintEnd_toEndOf="parent"
        uber:layout_constraintHorizontal_bias="0.5"
        uber:layout_constraintStart_toStartOf="parent"
        uber:layout_constraintTop_toBottomOf="@+id/textView15" />

    <View
        android:id="@+id/divider15"
        android:layout_width="200dp"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@color/chiantiLight"
        uber:layout_constraintEnd_toEndOf="parent"
        uber:layout_constraintHorizontal_bias="0.5"
        uber:layout_constraintStart_toStartOf="parent"
        uber:layout_constraintTop_toBottomOf="@+id/textView25" />


</android.support.constraint.ConstraintLayout>