<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".fragments.UberSettingFragment">

        <TextView
            android:id="@+id/tv_profileTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:fontFamily="cursive"
            android:text="@string/text_uberSettingTitle"
            android:textAlignment="center"
            android:textColor="@color/chiantiClean"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:fontFamily="@font/regular"
            android:text="@string/uber_setting2"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_profileTitle" />

        <Button
            android:id="@+id/saveAddress"
            android:layout_width="101dp"
            android:layout_height="48dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/ellipse_chianti"
            android:fontFamily="@font/regular"
            android:text="@string/button_saveData"
            android:textColor="@color/whiteClean"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newHome" />

        <com.gildStudios.DiTo.androidApp.customs.CustomEditText
            android:id="@+id/newHome"
            android:layout_width="285dp"
            android:layout_height="60dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/text_ellipse_chianti"
            android:drawableStart="@drawable/ic_new_home"
            android:ems="10"
            android:fontFamily="@font/regular"
            android:gravity="center"
            android:hint="@string/uber_tvHint_destination"
            android:inputType="textAutoComplete"
            android:singleLine="true"
            android:textAllCaps="false"
            android:textColor="#bdbdbd"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />


    </android.support.constraint.ConstraintLayout>

</ScrollView>

